--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>ife第五六天</title>
-		<link rel="stylesheet" href="css/style_3.css" />
+		<link rel="stylesheet" href="css/style_3.css"  id="css"/>
+		<script type="text/javascript" src="js.js" ></script>
 	</head>
 	<body>
+		<div>测试git更新</div>
 		<div class="content">
 			<div class="jianli">
 			<h1>简历</h1>
